--- a/src/components/GoogleSuggestions/index.css
+++ b/src/components/GoogleSuggestions/index.css
@@ -1,1 +1,33 @@
 /* Write your CSS here */
+.bg-container {
+  height: 100vh;
+  padding-top: 8em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.google-img {
+  width: 60%;
+  margin: 1em;
+}
+.search-container {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 3em;
+  padding: 1em;
+  width: 70%;
+}
+
+.search-icon {
+  height: 40%;
+}
+.search-box {
+  display: flex;
+  align-items: center;
+}
+.search-input {
+  border: none;
+  outline: none;
+  flex-grow: 1;
+  min-height: 45px;
+  font-size: 26px;
+}
