--- a/src/components/SuggestionItem/index.css
+++ b/src/components/SuggestionItem/index.css
@@ -1,1 +1,17 @@
 /* Write your CSS here */
+.suggestion-item {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  list-style: none;
+}
+.suggestion {
+  font-size: 1.5rem;
+  text-align: left;
+  flex-grow: 1;
+}
+.up-arrow {
+  height: 100%;
+}
